Fix layout to be side-by-side on larger screens and properly aligned on mobile

--- a/webui/src/routes/styles.css
+++ b/webui/src/routes/styles.css
@@ -34,3 +34,22 @@ nav {
 .l-box {
   padding: 1em;
 }
+
+.paste-section {
+  padding-right: 0.5em;
+}
+
+.search-section {
+  padding-left: 0.5em;
+}
+
+@media screen and (max-width: 567px) {
+  .paste-section {
+    padding-right: 0;
+  }
+
+  .search-section {
+    padding-left: 0;
+    margin-top: 1em;
+  }
+}
